tests/ui/rust-2018/uniform-paths/ambiguity.stderr
error[E0659]: `std` is ambiguous
  --> $DIR/ambiguity.rs:5:5
   |
LL | use std::io;
   |     ^^^ ambiguous name
   |
   = note: ambiguous because of multiple potential import sources
   = note: `std` could refer to a built-in crate
   = help: use `::std` to refer to this crate unambiguously
note: `std` could also refer to the module defined here
  --> $DIR/ambiguity.rs:8:1
   |
LL | / mod std {
LL | |     pub struct io;
LL | | }
   | |_^
   = help: use `crate::std` to refer to this module unambiguously

error: aborting due to previous error

For more information about this error, try `rustc --explain E0659`.
